--- a/if-else/3.3schrikkeljaar/package.json
+++ b/if-else/3.3schrikkeljaar/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "exercises",
+  "name": "3.3schrikkeljaar",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "readline-sync": "^1.4.10"
-  }
+  "license": "ISC"
 }
