--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "readline-sync": "^1.4.10"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gsaldanas/js-exercises.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gsaldanas/js-exercises/issues"
+  },
+  "homepage": "https://github.com/gsaldanas/js-exercises#readme"
 }
